configs/k8s/base/components/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8000
  selector:
    app: api
